--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,7 @@
         android:theme="@style/Theme.MovingOnTeste"
         tools:targetApi="31">
         <activity
-            android:name=".cliente_cronograma"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".cliente_home"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".cliente_chat"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".cliente_mapa"
+            android:name=".interfaceempresa"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
