--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,16 @@
         android:theme="@style/Theme.MovingOnTeste"
         tools:targetApi="31">
         <activity
-            android:name=".interfaceempresa"
+            android:name=".telasCliente.cliente_chatTeste"
+            android:exported="false"
+            android:label="@string/title_activity_cliente_chat_teste"
+            android:theme="@style/Theme.MovingOnTeste.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".telasEmpresa.InterfaceEmpresa"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
