--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,13 +56,13 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     //noinspection GradleDependency
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.3.0'
-
+    implementation 'androidx.compose.material:material:1.3.1'
+    implementation "androidx.compose.material:material-ripple:1.3.1"
 
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     //noinspection GradleDependency
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     //noinspection GradleDependency
@@ -86,4 +86,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
+
+    //Google Maps
+    implementation 'com.google.maps.android:maps-compose:2.7.2'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    // Optionally, you can include the widgets library if you want to use ScaleBar, etc.
+    implementation 'com.google.maps.android:maps-compose-widgets:2.7.2'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation "com.google.accompanist:accompanist-permissions:0.27.1"
 }
